# tengri-bot

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  MODULARIZATION_PLAN.md  NSFW_INTEGRATION_PLAN.md  README.md  SETUP_RUNBOOK.md  ZERO_PERMS_ADMIN_PLAN.md  bot.py  commands_menu.py  config.json  config.py  docker-compose.prod.yml  docker-compose.yml  grants.py  permissions.py  pyproject.toml  reputation_thresholds.py  requirements-nsfw.txt  requirements.txt  resolvers.py  responses.py  spam.py  state.py  utils.py
.github/workflows/: ci.yml
docs/: TNN_NEWS_BOT_MIGRATION_PLAN.md
handlers/: __init__.py  acquire_stfu.py  citizenship.py  doxx.py  exile.py  fool.py  mock.py  privileged_peasants.py  reputation.py  stfu.py  stfuproof.py  tengriguideme.py  translate.py
nsfw/: __init__.py  check.py  config.py  processors.py  utils.py
scripts/: backup-to-s3.sh  install-on-host.sh  setup-env.sh
terraform/: ecr.tf  iam.tf  lightsail.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_config.py  test_reputation_thresholds.py  test_spam.py
